[gd_scene load_steps=5 format=3 uid="uid://b5632wma687kj"]

[ext_resource type="FontFile" uid="uid://berylv85eo6t1" path="res://imports/fonts/VCR_OSD_MONO_1.001.ttf" id="1_cr101"]
[ext_resource type="Script" uid="uid://dy5l53mbv60yn" path="res://scripts/settings_menu.gd" id="1_wswnh"]
[ext_resource type="Theme" uid="uid://bk7as4gxm1c8l" path="res://ui/theme.tres" id="2_wswnh"]

[sub_resource type="LabelSettings" id="LabelSettings_labj1"]
font = ExtResource("1_cr101")
font_size = 180
outline_size = 30
outline_color = Color(0, 0, 0, 0.392157)

[node name="settings-menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wswnh")

[node name="center-container" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(493, 332)

[node name="up-down" type="GridContainer" parent="center-container"]
layout_mode = 2

[node name="margin-title" type="MarginContainer" parent="center-container/up-down"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 80

[node name="title" type="Label" parent="center-container/up-down/margin-title"]
layout_mode = 2
text = "KEY_SETTINGS"
label_settings = SubResource("LabelSettings_labj1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="left-right" type="GridContainer" parent="center-container/up-down"]
layout_mode = 2
mouse_filter = 0
columns = 2

[node name="options" type="GridContainer" parent="center-container/up-down/left-right"]
layout_mode = 2

[node name="back" type="Button" parent="center-container/up-down/left-right/options"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_wswnh")
text = "KEY_BACK"

[node name="language" type="Button" parent="center-container/up-down/left-right/options"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_wswnh")
text = "KEY_LANGUAGE"

[node name="video" type="Button" parent="center-container/up-down/left-right/options"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_wswnh")
text = "KEY_VIDEO"

[node name="audio" type="Button" parent="center-container/up-down/left-right/options"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_wswnh")
text = "KEY_AUDIO"

[node name="setting_panel" type="PanelContainer" parent="center-container/up-down/left-right"]
custom_minimum_size = Vector2(1200, 0)
layout_mode = 2

[node name="language" type="MarginContainer" parent="center-container/up-down/left-right/setting_panel"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="individual_settings" type="GridContainer" parent="center-container/up-down/left-right/setting_panel/language"]
layout_mode = 2

[node name="set" type="GridContainer" parent="center-container/up-down/left-right/setting_panel/language/individual_settings"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="center-container/up-down/left-right/setting_panel/language/individual_settings/set"]
layout_mode = 2
theme = ExtResource("2_wswnh")
text = "KEY_LANGUAGE"

[node name="OptionButton" type="OptionButton" parent="center-container/up-down/left-right/setting_panel/language/individual_settings/set"]
custom_minimum_size = Vector2(875, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_wswnh")
theme_override_fonts/font = ExtResource("1_cr101")
theme_override_font_sizes/font_size = 30
allow_reselect = true
item_count = 2
popup/item_0/text = "KEY_ENGLISH"
popup/item_0/id = 0
popup/item_1/text = "KEY_RUSSIAN"
popup/item_1/id = 1

[node name="video" type="MarginContainer" parent="center-container/up-down/left-right/setting_panel"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="individual_settings" type="GridContainer" parent="center-container/up-down/left-right/setting_panel/video"]
layout_mode = 2

[node name="set" type="GridContainer" parent="center-container/up-down/left-right/setting_panel/video/individual_settings"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 10
columns = 2

[node name="Label" type="Label" parent="center-container/up-down/left-right/setting_panel/video/individual_settings/set"]
layout_mode = 2
theme = ExtResource("2_wswnh")
text = "KEY_SENSITIVITY"

[node name="VBoxContainer" type="VBoxContainer" parent="center-container/up-down/left-right/setting_panel/video/individual_settings/set"]
custom_minimum_size = Vector2(885, 0)
layout_mode = 2
theme_override_constants/separation = 4
alignment = 1

[node name="HSlider" type="HSlider" parent="center-container/up-down/left-right/setting_panel/video/individual_settings/set/VBoxContainer"]
layout_mode = 2
value = 50.0
scrollable = false

[connection signal="pressed" from="center-container/up-down/left-right/options/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="center-container/up-down/left-right/options/language" to="." method="_on_language_pressed"]
[connection signal="pressed" from="center-container/up-down/left-right/options/video" to="." method="_on_video_pressed"]
[connection signal="pressed" from="center-container/up-down/left-right/options/audio" to="." method="_on_audio_pressed"]
[connection signal="item_selected" from="center-container/up-down/left-right/setting_panel/language/individual_settings/set/OptionButton" to="." method="_on_option_button_item_selected"]
